src/pages/Contact/Contact.css
.ContactWrapper {
    background-color: #01a5f0;
    height: auto;
    position: static;
    top: 80px;
    margin-bottom: 50px;
}
.ContactHeader {
    padding: 1px;
    background-color:#3d3d3f;
} 
@media only screen and (max-width: 1024px) {
    .ContactWrapper {
        margin-bottom: 45px;
    }
}
@media only screen and (max-width: 968px) {
    .ContactWrapper {
        margin-bottom: 20px;
    }
}
@media only screen and (max-width: 868px) {
    .ContactWrapper {
        margin-bottom: 10px;
    }
}
@media only screen and (max-width: 768px) {
    .ContactWrapper {
        margin-bottom: -10px;
    }
}
@media only screen and (max-width: 568px) {
    .ContactWrapper {
        margin-bottom: 5px;
    }
}

